<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/titleSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/backButton"
            android:text="@string/configuracion"
            android:textColor="@color/colorOnPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/regresar"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:tint="@color/colorOnPrimary" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/tema"
        android:textColor="@color/colorOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/themeLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claro"
            android:textColor="@color/colorOnPrimary"
            app:buttonTint="@drawable/radio_button_selector" />

        <RadioButton
            android:id="@+id/themeDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oscuro"
            android:textColor="@color/colorOnPrimary"
            app:buttonTint="@drawable/radio_button_selector" />

        <RadioButton
            android:id="@+id/themeDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/predeterminado"
            android:textColor="@color/colorOnPrimary"
            app:buttonTint="@drawable/radio_button_selector" />
    </RadioGroup>

    <Button
        android:id="@+id/btnClearSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_settings"
        android:text="@string/borrar_canciones"
        android:textColor="@color/colorOnPrimary"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnResetSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_settings"
        android:text="@string/restablecer_ajustes"
        android:textColor="@color/colorOnPrimary"
        app:backgroundTint="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditos"
            android:textColor="@color/colorOnPrimary"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
