<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <TextView
        android:id="@+id/startDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_inicio"
        android:textColor="@color/colorOnPrimary"
        android:textSize="14sp"
        android:layout_marginBottom="4dp"/>

    <Button
        android:id="@+id/startDatePickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_fecha_de_inicio"
        android:textColor="@color/colorOnPrimary"
        android:textSize="16sp"
        android:background="@drawable/card_background"
        android:layout_marginBottom="8dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/endDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_fin"
        android:textColor="@color/colorOnPrimary"
        android:textSize="14sp"
        android:layout_marginBottom="4dp"/>

    <Button
        android:id="@+id/endDatePickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_fecha_de_fin"
        android:textColor="@color/colorOnPrimary"
        android:textSize="16sp"
        app:background="@drawable/card_background"
        android:layout_marginBottom="8dp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/applyFilterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aplicar_filtro"
            android:textColor="@color/colorOnPrimary"
            android:textSize="16sp"
            android:background="@drawable/btn_settings"
            app:backgroundTint="@color/colorAccent"
            android:layout_marginEnd="4dp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/clearFilterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/borrar_filtro"
            android:textColor="@color/colorOnPrimary"
            android:textSize="16sp"
            android:background="@drawable/btn_settings"
            app:backgroundTint="@color/colorAccent"
            android:layout_marginStart="4dp"
            android:padding="8dp"/>
    </LinearLayout>
</LinearLayout>
