<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:background="@drawable/card_background"
    android:orientation="vertical"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/coverImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/portada_de_la_cancion" />

            <ImageView
                android:id="@+id/playPauseImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/reproducir_pausar"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_play"
                app:tint="@color/colorOnPrimary" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/songTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_de_la_cancion"
                android:textColor="@color/colorOnPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/artistNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_artista"
                android:textColor="@color/colorOnPrimary" />
        </LinearLayout>

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/favorito"
            android:src="@drawable/ic_star"
            app:tint="@color/colorOnPrimary" />
    </LinearLayout>
</LinearLayout>
