<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/titleSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/buscar"
            android:textColor="@color/colorOnPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/settingsButtonSearch"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_settings"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings"
            app:tint="@color/colorOnPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/searchButton"
            android:background="@drawable/card_background"
            android:backgroundTint="@null"
            android:hint="@string/buscar_cancion"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorOnPrimary"
            android:textColorHint="@color/colorOnPrimary" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:background="@drawable/btn_settings"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/buscar"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search"
            app:tint="@color/colorOnPrimary"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />
</LinearLayout>
